# langchain-experiments

./: .gitignore  README.md
notebooks/: 01_simple_conversational_agent.ipynb  02_youtube_loader.ipynb  03_local_llm.ipynb  04_database_queries.ipynb  05_summarizer.ipynb  06_vertex_ai.ipynb  pyproject.toml  sample.env  simple_conversational_agent.ipynb
notebooks/texts/: transcript.txt
notebooks/utils/: babyds.py
