[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Ricardo Wendell <rwendell@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
langchain = "^0.0.165"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
duckduckgo-search = "^2.9.3"
youtube-transcript-api = "^0.6.0"
pytube = "^15.0.0"
llama-cpp-python = "^0.1.49"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
