[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Ricardo Wendell <rwendell@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
langchain = "^0.0.194"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
duckduckgo-search = "^2.9.3"
youtube-transcript-api = "^0.6.0"
pytube = "^15.0.0"
llama-cpp-python = "^0.1.49"
pandas = "^2.0.1"
unstructured = "^0.7.2"
pdf2image = "^1.16.3"
tiktoken = "^0.4.0"
google-cloud-aiplatform = "^1.26.0"
transformers = "^4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
